<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-1dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonSensors"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onSensorsClick"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/sensors"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonStripTest"
                    style="?listButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onStripTestsClick"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/stripTest"
                    android:visibility="gone"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText" />

                <Button
                    android:id="@+id/buttonBluetooth"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onBluetoothDeviceClick"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/md610_photometer"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonCbt"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onCbtClick"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/cbt"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonColiformCount"
                    style="@style/ListButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onColiformCountClick"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/coliformCount"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonCalibrate"
                    style="?listButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onCalibrateClick"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/calibrate"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textVersionExpiry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:ellipsize="none"
                        android:gravity="center_horizontal"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="#d8001c29"
                        android:textSize="14dp"
                        android:visibility="gone"
                        tools:ignore="SpUsage"
                        tools:text="Version expires: 15 Jan 2018" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutDiagnostics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/textDiagnostics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/text_margin_bottom"
                android:layout_marginStart="16dp"
                android:ellipsize="none"
                android:gravity="start"
                android:singleLine="true"
                android:text="@string/diagnostics"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#2a01a2bc"
                android:textSize="46dp"
                tools:ignore="SpUsage" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabDisableDiagnostics"
                style="@style/floating_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textDiagnostics"
                android:layout_alignParentEnd="true"
                android:onClick="onDisableDiagnosticsClick"
                android:src="@drawable/ic_revert_24dp"
                app:backgroundTint="@color/diagnostic"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

</layout>