...
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.35">

            <ImageView
                android:id="@+id/imageBrand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:adjustViewBounds="false"
                android:contentDescription="@null"
                android:cropToPadding="false"
...
                android:minWidth="230dp"
                android:onClick="onStartTestClick"
                android:text="@string/next"
                android:theme="?primaryButtonStyle" />

            <Button
                android:id="@+id/button_instructions"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:drawableEnd="?forwardArrow"
...
