...

    <!--StripTest-->
    <string name="brightness">Brightness</string>
    <string name="measure_instruction">Put strip on black area with colour patches to the left. Hold camera above colour card until measurement is complete.</string>
    <string name="imageQuality">Image quality</string>
    <string name="shadows">Shadows</string>
    <string name="prepare_test">Prepare for test</string>
    <string name="taking_photo">Taking photo</string>
    <string name="waiting">Waiting</string>
    <string name="waiting_for">Waiting for %s</string>
    <string name="success_quality_checks">Success! Quality check passed</string>
    <string name="prepareForCalibration">Prepare for calibration</string>
    <string name="stripTest">Strip Test</string>
    <string name="no_result">No Result</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="checking_image_quality">Checking image quality</string>
    <string name="seconds">Sec.</string>
    <string name="detecting_color_card">Looking for colour card</string>
    <string name="ready_for_photo">Ready for photo</string>
...
